<resources>
    <string name="app_name">Swagger</string>
    <string name="prompt_username">手机号/SwaggerId</string>
    <string name="prompt_password">密码</string>
    <string name="reset_password">新的密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="welcome">"欢迎!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="ver_code_login">手机验证码登录</string>
    <string name="password_login">账号密码登录</string>
    <string name="go_register">还没有账户？前往注册</string>
    <string name="go_login">已有账户，前往登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="get_ver_code">获取验证码</string>
    <string name="register_title">注册</string>
    <string name="register_username">昵称（1-20个字符）</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="phone">手机号</string>
    <string name="ver_code">验证码</string>
    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
